--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,6 @@
 mysql.driver="com.mysql.jdbc.Drive"
-mysql.url="jdbc:mysql://localhost:3306/test?characterEncoding=utf8"
+mysql.url="jdbc:mysql://192.168.44.162:3306/test01?characterEncoding=utf8"
 mysql.user="root"
 mysql.password="123456"
 mysql.table="ProviceCityReport02"
+mysql.table.xiaoniucity="xiaoniu_city"
